<resources>
    <string name="app_name">Football Match Score</string>
    <string name="label_search_favorite_league">Cari liga favoritmu</string>
    <string name="content_description_league_logo">Logo liga</string>
    <string name="menu_search">Search</string>
    <string name="label_choose_league">Pilih Liga</string>
    <string name="label_versus">%s vs %s</string>
    <string name="content_description_team_logo">Logo tim</string>
    <string name="label_vs">VS</string>
    <string name="label_home">Home</string>
    <string name="label_away">Away</string>
    <string name="label_gk">GK</string>
    <string name="label_df">DF</string>
    <string name="label_mf">MF</string>
    <string name="label_fw">FW</string>
    <string name="label_sub">Sub</string>
    <string name="label_add_reminder">+ Tambah ke kalender</string>
    <string name="label_schedule">Jadwal</string>
    <string name="label_tim">Tim</string>
    <string name="label_about">Pengembang</string>
    <string name="developer_name">Satria Adi Putra</string>
    <string name="author_jobdesk">Android Developers @ UNIKOM CodeLabs</string>
    <string name="label_find">Find Me On</string>
    <string name="label_find_more">Find More</string>

    <string name="url_instagram">https://instagram.com/satadii11</string>
    <string name="url_linked_in">https://www.linkedin.com/in/satria-adi-putra-853306156/</string>
    <string name="url_github">https://github.com/golok56</string>
    <string name="url_github_pages">https://golok56.github.io</string>
    <string name="label_since">Since %s</string>
    <string name="label_overview">Overview</string>
    <string name="label_players">Players</string>
    <string name="label_height">Height (m)</string>
    <string name="label_weight">Weight (kg)</string>
</resources>
