<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivScheduleDetailLeagueLogo"
        android:layout_width="@dimen/image_very_small"
        android:layout_height="@dimen/image_very_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_standard"
        android:contentDescription="@string/content_description_league_logo"
        app:layout_constraintEnd_toStartOf="@id/tvScheduleDetailDate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvScheduleDetailDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivScheduleDetailLeagueLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivScheduleDetailLeagueLogo"
        app:layout_constraintTop_toTopOf="@id/ivScheduleDetailLeagueLogo"
        tools:text="12/24/2019" />

    <ImageView
        android:id="@+id/ivScheduleDetailHome"
        android:layout_width="@dimen/image_large"
        android:layout_height="@dimen/image_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:contentDescription="@string/content_description_team_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivScheduleDetailLeagueLogo"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvScheduleDetailHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/ivScheduleDetailHome"
        app:layout_constraintStart_toStartOf="@id/ivScheduleDetailHome"
        app:layout_constraintTop_toBottomOf="@id/ivScheduleDetailHome"
        tools:text="Manchester United" />

    <ImageView
        android:id="@+id/ivScheduleDetailAway"
        android:layout_width="@dimen/image_large"
        android:layout_height="@dimen/image_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:contentDescription="@string/content_description_team_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivScheduleDetailHome"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvScheduleDetailAway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/ivScheduleDetailAway"
        app:layout_constraintStart_toStartOf="@id/ivScheduleDetailAway"
        app:layout_constraintTop_toBottomOf="@id/ivScheduleDetailAway"
        tools:text="Chelsea" />

    <TextView
        android:id="@+id/tvScheduleDetailVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_vs"
        app:layout_constraintBottom_toBottomOf="@id/tvScheduleDetailHome"
        app:layout_constraintEnd_toStartOf="@id/ivScheduleDetailAway"
        app:layout_constraintStart_toEndOf="@id/ivScheduleDetailHome"
        app:layout_constraintTop_toTopOf="@id/ivScheduleDetailHome" />

    <TextView
        android:id="@+id/tvScheduleDetailHomeScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/tvScheduleDetailHome"
        app:layout_constraintEnd_toStartOf="@id/tvScheduleDetailVersus"
        app:layout_constraintStart_toEndOf="@id/ivScheduleDetailHome"
        app:layout_constraintTop_toTopOf="@id/ivScheduleDetailHome"
        tools:text="0" />

    <TextView
        android:id="@+id/tvScheduleDetailAwayScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/tvScheduleDetailHome"
        app:layout_constraintEnd_toStartOf="@id/ivScheduleDetailAway"
        app:layout_constraintStart_toEndOf="@id/tvScheduleDetailVersus"
        app:layout_constraintTop_toTopOf="@id/ivScheduleDetailHome"
        tools:text="5" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlScheduleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScheduleDetailHome">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_away" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/flScheduleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlScheduleDetail" />

    <TextView
        android:id="@+id/tvscheduleDetailAddReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/label_add_reminder"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flScheduleDetail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScheduleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:src="@drawable/ic_star_border_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>