<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivAboutBanner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        tools:src="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/ivAboutAvatar"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/ivAboutBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAboutBanner"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvAboutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/developer_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAboutAvatar" />

    <TextView
        android:id="@+id/tvAboutJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/author_jobdesk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAboutName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_standard"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAboutJob">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_large">

            <TextView
                android:id="@+id/tvAboutFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_find"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivAboutIg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toStartOf="@id/ivAboutLinked"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAboutFind"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/ivAboutLinked"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="@dimen/margin_standard"
                app:layout_constraintEnd_toStartOf="@id/ivAboutGithub"
                app:layout_constraintStart_toEndOf="@id/ivAboutIg"
                app:layout_constraintTop_toTopOf="@id/ivAboutIg"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/ivAboutGithub"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="@dimen/margin_standard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivAboutLinked"
                app:layout_constraintTop_toTopOf="@id/ivAboutIg"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvAboutFindMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/label_find_more"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/cvAbout"
        app:layout_constraintTop_toBottomOf="@id/cvAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>